welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: not found: value Tlength
	T(Tlength-1)=getCouleurSol();
          ^